# agentgraph

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  sota-portfolio.yml  sota-urls.yml  sota.yml
benchmarks/: manifest.json
docker/: Dockerfile.compliance  Dockerfile.construction  Dockerfile.healthcare  Dockerfile.insurance  Dockerfile.recruiting  Dockerfile.sales-ops  Dockerfile.server  Dockerfile.support-ops  Dockerfile.ui
docs/: architecture.md  quickstart.md
docs/sota/: README.md  agentgraph-sota-dossier.md
docs/sota/evidence/portfolio/: index-config.json  open-studio-context.json  products.json
docs/sota/evidence/schema/: claim.schema.json  competitor.schema.json  context.schema.json  criteria.schema.json  gap.schema.json  portfolio.schema.json  run.schema.json  schema-version.json  scope.schema.json  source.schema.json  verdict.schema.json
examples/: README.md  _common.py  custom_graph.py  embed_in_fastapi.py
examples/compliance/: review_control.py
examples/construction/: draft_rfi.py
examples/healthcare/: triage_intake.py
examples/insurance/: capture_fnol.py
examples/recruiting/: source_candidates.py
examples/sales_ops/: pipeline_review.py  qualify_lead.py
examples/support_ops/: triage_ticket.py
scripts/: smoke_server.py  sota_collect.py  test.sh
scripts/sota/: _common.py  check_urls.py  refresh_context.py  refresh_github.py  render.py  requirements.txt  score.py  sync_schema.py  verify.py
tests/: __init__.py  conftest.py  pyproject.toml  test_core.py  test_llm.py  test_runtime.py  test_sales_ops.py  test_sdk.py  test_server.py  test_sota_collect.py  test_sota_context.py  test_sota_gaps.py  test_sota_github.py  test_sota_render.py  test_sota_schemas.py  test_sota_scoring.py  test_sota_urls.py  test_sota_verdict.py  test_verticals.py
ui/: README.md  next.config.js  package.json  tailwind.config.ts
ui/src/app/: globals.css  layout.tsx  page.tsx
ui/src/app/agents/: page.tsx
ui/src/app/audit/: page.tsx
ui/src/app/threads/: page.tsx
ui/src/lib/: hooks.ts
verticals/_shared/: pyproject.toml
verticals/_shared/agentgraph_verticals/: __init__.py  base.py
verticals/compliance/: README.md  pyproject.toml
verticals/compliance/src/agentgraph_compliance/: __init__.py  agents.py  graphs.py  policies.py  service.py  tools.py
verticals/construction/: README.md  pyproject.toml
verticals/construction/src/agentgraph_construction/: __init__.py  agents.py  graphs.py  policies.py  service.py  tools.py
verticals/healthcare/: README.md  pyproject.toml
verticals/healthcare/src/agentgraph_healthcare/: __init__.py  agents.py  graphs.py  policies.py  service.py  tools.py
verticals/insurance/: README.md  pyproject.toml
verticals/insurance/src/agentgraph_insurance/: __init__.py  agents.py  graphs.py  policies.py  service.py  tools.py
verticals/recruiting/: README.md  pyproject.toml
verticals/recruiting/src/agentgraph_recruiting/: __init__.py  agents.py  graphs.py  policies.py  service.py  tools.py
verticals/sales-ops/: README.md  pyproject.toml
verticals/sales-ops/src/agentgraph_sales_ops/: __init__.py  agents.py  graphs.py  policies.py  service.py  tools.py
verticals/support-ops/: README.md  pyproject.toml
verticals/support-ops/src/agentgraph_support_ops/: __init__.py  agents.py  graphs.py  policies.py  service.py  tools.py
