[project]
name = "agentgraph-verticals"
version = "0.1.0"
description = "Shared base for AgentGraph vertical packs."
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "AgentGraph Authors" }]
dependencies = [
    "pydantic>=2.6",
    "agentgraph-core",
    "agentgraph-runtime",
    "agentgraph-sdk",
    "agentgraph-llm",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agentgraph_verticals"]
include = ["agentgraph_verticals/**/*.py"]

[tool.hatch.build.targets.sdist]
include = ["agentgraph_verticals", "pyproject.toml"]
