[project]
name = "agentgraph-compliance"
version = "0.1.0"
description = "Compliance vertical pack: policy review, control mapping, evidence collection."
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "AgentGraph Authors" }]
dependencies = [
    "pydantic>=2.6",
    "agentgraph-core",
    "agentgraph-runtime",
    "agentgraph-sdk",
    "agentgraph-llm",
    "agentgraph-verticals",
]

[project.scripts]
ag-compliance = "agentgraph_compliance.service:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agentgraph_compliance"]
