[project]
name = "agentgraph-insurance"
version = "0.1.0"
description = "Insurance vertical pack: FNOL intake, underwriting copilot, claims triage."
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "AgentGraph Authors" }]
dependencies = [
    "pydantic>=2.6",
    "agentgraph-core",
    "agentgraph-runtime",
    "agentgraph-sdk",
    "agentgraph-llm",
    "agentgraph-verticals",
]

[project.scripts]
ag-insurance = "agentgraph_insurance.service:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agentgraph_insurance"]
