[project]
name = "agentgraph-sales-ops"
version = "0.1.0"
description = "Sales operations vertical pack: lead qualification, outreach, pipeline."
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "AgentGraph Authors" }]
dependencies = [
    "pydantic>=2.6",
    "agentgraph-core",
    "agentgraph-runtime",
    "agentgraph-sdk",
    "agentgraph-llm",
    "agentgraph-verticals",
]

[project.scripts]
ag-sales-ops = "agentgraph_sales_ops.service:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agentgraph_sales_ops"]
