[project]
name = "agentgraph-support-ops"
version = "0.1.0"
description = "Support operations vertical pack: ticket triage, deflection, escalation."
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "AgentGraph Authors" }]
dependencies = [
    "pydantic>=2.6",
    "agentgraph-core",
    "agentgraph-runtime",
    "agentgraph-sdk",
    "agentgraph-llm",
    "agentgraph-verticals",
]

[project.scripts]
ag-support-ops = "agentgraph_support_ops.service:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agentgraph_support_ops"]
